# csv2excel

./: README.md  pyproject.toml
.github/workflows/: actions.yml
src/csv2excel/: __init__.py  cli.py  converter.py
tests/: fixture.csv  output.xlsx  test_csv2excel.py
